@@ -8,6 +8,7 @@ Change Log:
 1.1.2 - 12/01/2010
 ----------------------------------------------------------------------
 - Fixed: MP html needs more css class names
+- Fixed: Make "Continue Checkout" button text only
 
 1.1.1 - 11/25/2010
 ----------------------------------------------------------------------
